// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat Items loading it renders loading icons 1`] = `
<Component
  fields={
    Array [
      Object {
        "color": "#000000",
        "description": "NETWORK_EVENTS",
        "key": "networkEvents",
        "value": null,
      },
    ]
  }
  isLoading={true}
/>
`;

exports[`Stat Items rendering kpis with charts it renders the default widget 1`] = `
<pure(Component)
  areaChart={
    Array [
      Object {
        "color": "#DB1374",
        "key": "uniqueSourceIpsHistogram",
        "value": Array [
          Object {
            "x": 1556686800000,
            "y": 580213,
          },
          Object {
            "x": 1556730000000,
            "y": 1096175,
          },
          Object {
            "x": 1556773200000,
            "y": 12382,
          },
        ],
      },
      Object {
        "color": "#490092",
        "key": "uniqueDestinationIpsHistogram",
        "value": Array [
          Object {
            "x": 1556686800000,
            "y": 565975,
          },
          Object {
            "x": 1556730000000,
            "y": 1084366,
          },
          Object {
            "x": 1556773200000,
            "y": 12280,
          },
        ],
      },
    ]
  }
  barChart={
    Array [
      Object {
        "color": "#DB1374",
        "key": "uniqueSourceIps",
        "value": Array [
          Object {
            "x": 1714,
            "y": "uniqueSourceIps",
          },
        ],
      },
      Object {
        "color": "#490092",
        "key": "uniqueDestinationIps",
        "value": Array [
          Object {
            "x": 2354,
            "y": "uniqueDestinationIps",
          },
        ],
      },
    ]
  }
  description="UNIQUE_PRIVATE_IPS"
  fields={
    Array [
      Object {
        "color": "#DB1374",
        "description": "Source",
        "key": "uniqueSourceIps",
        "value": 1714,
      },
      Object {
        "color": "#490092",
        "description": "Dest.",
        "key": "uniqueDestinationIps",
        "value": 2359,
      },
    ]
  }
  isLoading={false}
>
  <Component
    areaChart={
      Array [
        Object {
          "color": "#DB1374",
          "key": "uniqueSourceIpsHistogram",
          "value": Array [
            Object {
              "x": 1556686800000,
              "y": 580213,
            },
            Object {
              "x": 1556730000000,
              "y": 1096175,
            },
            Object {
              "x": 1556773200000,
              "y": 12382,
            },
          ],
        },
        Object {
          "color": "#490092",
          "key": "uniqueDestinationIpsHistogram",
          "value": Array [
            Object {
              "x": 1556686800000,
              "y": 565975,
            },
            Object {
              "x": 1556730000000,
              "y": 1084366,
            },
            Object {
              "x": 1556773200000,
              "y": 12280,
            },
          ],
        },
      ]
    }
    barChart={
      Array [
        Object {
          "color": "#DB1374",
          "key": "uniqueSourceIps",
          "value": Array [
            Object {
              "x": 1714,
              "y": "uniqueSourceIps",
            },
          ],
        },
        Object {
          "color": "#490092",
          "key": "uniqueDestinationIps",
          "value": Array [
            Object {
              "x": 2354,
              "y": "uniqueDestinationIps",
            },
          ],
        },
      ]
    }
    description="UNIQUE_PRIVATE_IPS"
    fields={
      Array [
        Object {
          "color": "#DB1374",
          "description": "Source",
          "key": "uniqueSourceIps",
          "value": 1714,
        },
        Object {
          "color": "#490092",
          "description": "Dest.",
          "key": "uniqueDestinationIps",
          "value": 2359,
        },
      ]
    }
    isLoading={false}
  >
    <Styled(EuiFlexItem)
      key="stat-items-undefined"
    >
      <EuiFlexItem
        className="sc-bxivhb bQCHAr"
      >
        <div
          className="euiFlexItem sc-bxivhb bQCHAr"
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <div
              className="euiPanel euiPanel--paddingMedium"
            >
              <EuiTitle
                size="xxxs"
              >
                <h6
                  className="euiTitle euiTitle--xxxsmall"
                >
                  UNIQUE_PRIVATE_IPS
                </h6>
              </EuiTitle>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)
                    key="stat-items-field-uniqueSourceIps"
                  >
                    <EuiFlexItem
                      className="sc-bxivhb bQCHAr"
                    >
                      <div
                        className="euiFlexItem sc-bxivhb bQCHAr"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-bxivhb bQCHAr"
                              >
                                <div
                                  className="euiFlexItem sc-bxivhb bQCHAr"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-ifAKCX bfXlPM"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-ifAKCX bfXlPM"
                                      >
                                        1,714
                                         
                                        Source
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                  <Styled(EuiFlexItem)
                    key="stat-items-field-uniqueDestinationIps"
                  >
                    <EuiFlexItem
                      className="sc-bxivhb bQCHAr"
                    >
                      <div
                        className="euiFlexItem sc-bxivhb bQCHAr"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-bxivhb bQCHAr"
                              >
                                <div
                                  className="euiFlexItem sc-bxivhb bQCHAr"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-ifAKCX bfXlPM"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-ifAKCX bfXlPM"
                                      >
                                        2,359
                                         
                                        Dest.
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
              <EuiHorizontalRule>
                <hr
                  className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
                />
              </EuiHorizontalRule>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)>
                    <EuiFlexItem
                      className="sc-bxivhb bQCHAr"
                    >
                      <div
                        className="euiFlexItem sc-bxivhb bQCHAr"
                      >
                        <pure(Component)
                          barChart={
                            Array [
                              Object {
                                "color": "#DB1374",
                                "key": "uniqueSourceIps",
                                "value": Array [
                                  Object {
                                    "x": 1714,
                                    "y": "uniqueSourceIps",
                                  },
                                ],
                              },
                              Object {
                                "color": "#490092",
                                "key": "uniqueDestinationIps",
                                "value": Array [
                                  Object {
                                    "x": 2354,
                                    "y": "uniqueDestinationIps",
                                  },
                                ],
                              },
                            ]
                          }
                        >
                          <Component
                            barChart={
                              Array [
                                Object {
                                  "color": "#DB1374",
                                  "key": "uniqueSourceIps",
                                  "value": Array [
                                    Object {
                                      "x": 1714,
                                      "y": "uniqueSourceIps",
                                    },
                                  ],
                                },
                                Object {
                                  "color": "#490092",
                                  "key": "uniqueDestinationIps",
                                  "value": Array [
                                    Object {
                                      "x": 2354,
                                      "y": "uniqueDestinationIps",
                                    },
                                  ],
                                },
                              ]
                            }
                          >
                            <AutoSizer
                              content={true}
                              detectAnyWindowResize={false}
                            >
                              <styled.div
                                data-test-subj="wrapped-by-auto-sizer"
                                innerRef={[Function]}
                              >
                                <div
                                  className="sc-htpNat loNVyu"
                                  data-test-subj="wrapped-by-auto-sizer"
                                >
                                  <pure(Component)
                                    data={
                                      Array [
                                        Object {
                                          "color": "#DB1374",
                                          "key": "uniqueSourceIps",
                                          "value": Array [
                                            Object {
                                              "x": 1714,
                                              "y": "uniqueSourceIps",
                                            },
                                          ],
                                        },
                                        Object {
                                          "color": "#490092",
                                          "key": "uniqueDestinationIps",
                                          "value": Array [
                                            Object {
                                              "x": 2354,
                                              "y": "uniqueDestinationIps",
                                            },
                                          ],
                                        },
                                      ]
                                    }
                                  >
                                    <Component
                                      data={
                                        Array [
                                          Object {
                                            "color": "#DB1374",
                                            "key": "uniqueSourceIps",
                                            "value": Array [
                                              Object {
                                                "x": 1714,
                                                "y": "uniqueSourceIps",
                                              },
                                            ],
                                          },
                                          Object {
                                            "color": "#490092",
                                            "key": "uniqueDestinationIps",
                                            "value": Array [
                                              Object {
                                                "x": 2354,
                                                "y": "uniqueDestinationIps",
                                              },
                                            ],
                                          },
                                        ]
                                      }
                                    />
                                  </pure(Component)>
                                </div>
                              </styled.div>
                            </AutoSizer>
                          </Component>
                        </pure(Component)>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                  <Styled(EuiFlexItem)>
                    <EuiFlexItem
                      className="sc-bxivhb bQCHAr"
                    >
                      <div
                        className="euiFlexItem sc-bxivhb bQCHAr"
                      >
                        <pure(Component)
                          areaChart={
                            Array [
                              Object {
                                "color": "#DB1374",
                                "key": "uniqueSourceIpsHistogram",
                                "value": Array [
                                  Object {
                                    "x": 1556686800000,
                                    "y": 580213,
                                  },
                                  Object {
                                    "x": 1556730000000,
                                    "y": 1096175,
                                  },
                                  Object {
                                    "x": 1556773200000,
                                    "y": 12382,
                                  },
                                ],
                              },
                              Object {
                                "color": "#490092",
                                "key": "uniqueDestinationIpsHistogram",
                                "value": Array [
                                  Object {
                                    "x": 1556686800000,
                                    "y": 565975,
                                  },
                                  Object {
                                    "x": 1556730000000,
                                    "y": 1084366,
                                  },
                                  Object {
                                    "x": 1556773200000,
                                    "y": 12280,
                                  },
                                ],
                              },
                            ]
                          }
                        >
                          <Component
                            areaChart={
                              Array [
                                Object {
                                  "color": "#DB1374",
                                  "key": "uniqueSourceIpsHistogram",
                                  "value": Array [
                                    Object {
                                      "x": 1556686800000,
                                      "y": 580213,
                                    },
                                    Object {
                                      "x": 1556730000000,
                                      "y": 1096175,
                                    },
                                    Object {
                                      "x": 1556773200000,
                                      "y": 12382,
                                    },
                                  ],
                                },
                                Object {
                                  "color": "#490092",
                                  "key": "uniqueDestinationIpsHistogram",
                                  "value": Array [
                                    Object {
                                      "x": 1556686800000,
                                      "y": 565975,
                                    },
                                    Object {
                                      "x": 1556730000000,
                                      "y": 1084366,
                                    },
                                    Object {
                                      "x": 1556773200000,
                                      "y": 12280,
                                    },
                                  ],
                                },
                              ]
                            }
                          >
                            <AutoSizer
                              content={true}
                              detectAnyWindowResize={false}
                            >
                              <styled.div
                                data-test-subj="wrapped-by-auto-sizer"
                                innerRef={[Function]}
                              >
                                <div
                                  className="sc-htpNat loNVyu"
                                  data-test-subj="wrapped-by-auto-sizer"
                                >
                                  <pure(Component)
                                    data={
                                      Array [
                                        Object {
                                          "color": "#DB1374",
                                          "key": "uniqueSourceIpsHistogram",
                                          "value": Array [
                                            Object {
                                              "x": 1556686800000,
                                              "y": 580213,
                                            },
                                            Object {
                                              "x": 1556730000000,
                                              "y": 1096175,
                                            },
                                            Object {
                                              "x": 1556773200000,
                                              "y": 12382,
                                            },
                                          ],
                                        },
                                        Object {
                                          "color": "#490092",
                                          "key": "uniqueDestinationIpsHistogram",
                                          "value": Array [
                                            Object {
                                              "x": 1556686800000,
                                              "y": 565975,
                                            },
                                            Object {
                                              "x": 1556730000000,
                                              "y": 1084366,
                                            },
                                            Object {
                                              "x": 1556773200000,
                                              "y": 12280,
                                            },
                                          ],
                                        },
                                      ]
                                    }
                                  >
                                    <Component
                                      data={
                                        Array [
                                          Object {
                                            "color": "#DB1374",
                                            "key": "uniqueSourceIpsHistogram",
                                            "value": Array [
                                              Object {
                                                "x": 1556686800000,
                                                "y": 580213,
                                              },
                                              Object {
                                                "x": 1556730000000,
                                                "y": 1096175,
                                              },
                                              Object {
                                                "x": 1556773200000,
                                                "y": 12382,
                                              },
                                            ],
                                          },
                                          Object {
                                            "color": "#490092",
                                            "key": "uniqueDestinationIpsHistogram",
                                            "value": Array [
                                              Object {
                                                "x": 1556686800000,
                                                "y": 565975,
                                              },
                                              Object {
                                                "x": 1556730000000,
                                                "y": 1084366,
                                              },
                                              Object {
                                                "x": 1556773200000,
                                                "y": 12280,
                                              },
                                            ],
                                          },
                                        ]
                                      }
                                    />
                                  </pure(Component)>
                                </div>
                              </styled.div>
                            </AutoSizer>
                          </Component>
                        </pure(Component)>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
            </div>
          </EuiPanel>
        </div>
      </EuiFlexItem>
    </Styled(EuiFlexItem)>
  </Component>
</pure(Component)>
`;

exports[`Stat Items rendering kpis without charts it renders the default widget 1`] = `
<pure(Component)
  description="HOSTS"
  fields={
    Array [
      Object {
        "color": "#3185FC",
        "key": "hosts",
        "value": null,
      },
    ]
  }
  isLoading={false}
>
  <Component
    description="HOSTS"
    fields={
      Array [
        Object {
          "color": "#3185FC",
          "key": "hosts",
          "value": null,
        },
      ]
    }
    isLoading={false}
  >
    <Styled(EuiFlexItem)
      key="stat-items-undefined"
    >
      <EuiFlexItem
        className="sc-bxivhb bQCHAr"
      >
        <div
          className="euiFlexItem sc-bxivhb bQCHAr"
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <div
              className="euiPanel euiPanel--paddingMedium"
            >
              <EuiTitle
                size="xxxs"
              >
                <h6
                  className="euiTitle euiTitle--xxxsmall"
                >
                  HOSTS
                </h6>
              </EuiTitle>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)
                    key="stat-items-field-hosts"
                  >
                    <EuiFlexItem
                      className="sc-bxivhb bQCHAr"
                    >
                      <div
                        className="euiFlexItem sc-bxivhb bQCHAr"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-bxivhb bQCHAr"
                              >
                                <div
                                  className="euiFlexItem sc-bxivhb bQCHAr"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-ifAKCX bfXlPM"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-ifAKCX bfXlPM"
                                      >
                                         
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                />
              </EuiFlexGroup>
            </div>
          </EuiPanel>
        </div>
      </EuiFlexItem>
    </Styled(EuiFlexItem)>
  </Component>
</pure(Component)>
`;

exports[`Stat Items rendering kpis without charts it renders the default widget 2`] = `
<pure(Component)
  areaChart={Array []}
  barChart={Array []}
  description="HOSTS"
  fields={
    Array [
      Object {
        "color": "#3185FC",
        "key": "hosts",
        "value": null,
      },
    ]
  }
  isLoading={false}
>
  <Component
    areaChart={Array []}
    barChart={Array []}
    description="HOSTS"
    fields={
      Array [
        Object {
          "color": "#3185FC",
          "key": "hosts",
          "value": null,
        },
      ]
    }
    isLoading={false}
  >
    <Styled(EuiFlexItem)
      key="stat-items-undefined"
    >
      <EuiFlexItem
        className="sc-bxivhb bQCHAr"
      >
        <div
          className="euiFlexItem sc-bxivhb bQCHAr"
        >
          <EuiPanel
            grow={true}
            hasShadow={false}
            paddingSize="m"
          >
            <div
              className="euiPanel euiPanel--paddingMedium"
            >
              <EuiTitle
                size="xxxs"
              >
                <h6
                  className="euiTitle euiTitle--xxxsmall"
                >
                  HOSTS
                </h6>
              </EuiTitle>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)
                    key="stat-items-field-hosts"
                  >
                    <EuiFlexItem
                      className="sc-bxivhb bQCHAr"
                    >
                      <div
                        className="euiFlexItem sc-bxivhb bQCHAr"
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          gutterSize="m"
                          responsive={false}
                        >
                          <div
                            className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                          >
                            <Styled(EuiFlexItem)>
                              <EuiFlexItem
                                className="sc-bxivhb bQCHAr"
                              >
                                <div
                                  className="euiFlexItem sc-bxivhb bQCHAr"
                                >
                                  <Styled(EuiTitle)>
                                    <EuiTitle
                                      className="sc-ifAKCX bfXlPM"
                                    >
                                      <p
                                        className="euiTitle euiTitle--medium sc-ifAKCX bfXlPM"
                                      >
                                         
                                      </p>
                                    </EuiTitle>
                                  </Styled(EuiTitle)>
                                </div>
                              </EuiFlexItem>
                            </Styled(EuiFlexItem)>
                          </div>
                        </EuiFlexGroup>
                      </div>
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
              <EuiFlexGroup>
                <div
                  className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
                >
                  <Styled(EuiFlexItem)>
                    <EuiFlexItem
                      className="sc-bxivhb bQCHAr"
                    >
                      <div
                        className="euiFlexItem sc-bxivhb bQCHAr"
                      />
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                  <Styled(EuiFlexItem)>
                    <EuiFlexItem
                      className="sc-bxivhb bQCHAr"
                    >
                      <div
                        className="euiFlexItem sc-bxivhb bQCHAr"
                      />
                    </EuiFlexItem>
                  </Styled(EuiFlexItem)>
                </div>
              </EuiFlexGroup>
            </div>
          </EuiPanel>
        </div>
      </EuiFlexItem>
    </Styled(EuiFlexItem)>
  </Component>
</pure(Component)>
`;
